# project

./: .editorconfig  .gitignore  README.md  dev.sh
backend/: .gitignore  ARCHITECTURE.md  README.md  TODO.md  auth.py  config.default.toml  constants.py  main.py  models.py  postgrest.default.conf  postgrest.setup.sh  pyproject.toml
backend/db/: 00_reset.sql  01_setup.sql  02_init.sql  03_rls.sql  10_TestData.sql  20240124_init.sql  TestData.sql
backend/src/: routes.py
backend/src/backend/: __init__.py  auth.py  cfg.py  cli.py  constants.py  db.py  llama.py  main.py  misc.py  models.py  ollama.py  routes.py  shorten.py  summarize.py  summerize.py  test_routes.py  testing_routes.py  workers.py  yt_transcribe.py
extension/: README.md  manifest.json
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js  mockHistory.js
frontend/src/api/: Auth.js  Summarize.js  Summerize.js  User.js
frontend/src/components/: GetStartedCard.js  HistoryCard.js  Input.js  SearchBar.js
frontend/src/components/account/: AccountSection.js  ChangeEmailSection.js  ChangePasswordSection.js  ClearHistorySection.js  DeleteAccountSection.js  DetailsSection.js
frontend/src/components/auth/: FormButton.js  GoogleButton.js  LoginView.js  RegisterView.js
frontend/src/components/classes/: Link.js  Shortened.js  Summary.js
frontend/src/components/context/: GlobalContext.jsx  reducers.js
frontend/src/components/footer/: Footer.js
frontend/src/components/inputs/: ConfirmPasswordInput.js  EmailInput.js  Input.js  PasswordValidInput.js
frontend/src/components/nav/: Navbar.js
frontend/src/lib/: Constants.js
frontend/src/pages/: Account.js  Auth.js  GetStarted.js  History.js  Home.js  Landing.js  Loading.js  Login.js  NotFound.js  StylingGuide.js  Summary.js  index.js
