[project]
name = "backend"
version = "0.1.0"
description = "web summarizer for 4p02"
# 3.10 introduces match/case
requires-python = ">=3.10"
# readme = "README.md"
# license = {file = "LICENSE"}

dependencies = [
    "fastapi~=0.109",
    "uvicorn~=0.27",
    "jwt~=1.3",
    "typeguard~=4.1",
    "ollama~=0.1",
]

[project.scripts]
backend = "backend.main:main"
backend-setupcfg = "backend.cli:setup_cfg"
backend-migrate = "backend.cli:migrate_db"
