[project]
name = "backend"
version = "0.1.0"
description = "web summarizer for 4p02"

# 3.10 for match/case, 3.11 for tomllib builtin
requires-python = ">= 3.11"

readme = "README.md"

dependencies = [
    "fastapi ~= 0.109",
    "starlette ~= 0.3",
    "uvicorn ~= 0.27",
    "jwt ~= 1.3",
    "typeguard ~= 4.1",
    # this requires the system dependency libpq
    'psycopg ~= 3.1; platform_system != "Windows"',
    # windows (obviously) doesn't have libpq readily available, so use the wheel
    'psycopg[binary] ~= 3.1; platform_system == "Windows"',
    "ollama >= 0.1.7",
    "authlib ~= 1.3",
    "itsdangerous ~= 2.1",
    "bcrypt ~= 4.1.2",
    "pytest ~= 8.0.0",
    "urllib3 ~= 1.26",
    "beautifulsoup4 ~= 4.10",
]

[build-system]
# setuptools 61 needed needed for tool.setuptools.package-data support
# setuptools 64 needed for editable install support
requires = ["setuptools >= 64.0"]

[tool.setuptools.package-data]
backend = ["*.toml"]

[project.scripts]
backend = "backend.main:main"
backend-setupcfg = "backend.cli:setup_cfg"
backend-migrate = "backend.cli:migrate_db"
